--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,63 @@ ul, ol { list-style: none; }
 .fl{ float: left; }
 .fr{float: right;}
 img{max-width: 100%;}
+.nav-top{
+  position: fixed;
+  top:-100%;
+  left: 0;
+  width:100vw;
+  height: 100%;
+  background: #0DD5FF;  
+  z-index: 9999;
+  transition: all 2s;
+}
+.nav-top-nav{
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  padding: 0 5%;
+  box-sizing: border-box;
+}
+.nav-top-nav img{
+  vertical-align:middle;
+}
+.nav-top-left{
+  position: absolute;
+  left: 0;
+  top:0;
+  width: 9.9%;
+  height: 100%;
+  background: url(../images/nav-top-right.png) no-repeat center center;
+  background-size: 100% auto;
+}
+.nav-top-right{
+  position: absolute;
+  right: 0;
+  top:0;
+  width: 9.9%;
+  height: 100%;
+  background: url(../images/nav-top-left.png) no-repeat center center;
+  background-size: 100% auto;
+}
+.nav-top-list{
+  position: absolute;
+  right: 0;
+  left: 0;
+  max-width: 400px;
+  text-align: center;
+  top:27.9%;
+  margin: 0 auto;
+}
+.nav-top-list>ul li {
+  margin-bottom: 30px;
+}
+.nav-top-list .nav-our ul {
+  display: flex;
+  justify-content: space-between;
+}
+.nav-top-list .nav-our ul li {
+  margin: 0 20px;
+}
 .nav{
   position: fixed;
   width: 100%;
@@ -19,28 +76,41 @@ img{max-width: 100%;}
   top: 0;
   left: 0;
   background: rgba(000, 000, 000, 0);
-  z-index: 999;
+  z-index: 70;
   padding: 0 5%;
   box-sizing: border-box;
 }
-.nav div img{
-vertical-align:middle;
-}
-.nav-on,.nav-active,.nav-three{
-  display: none;
-}
-.nav div span{
-  margin: 0 20px;
+.nav-line{
+  width: 40px;
+  margin-top: 28px;
   cursor: pointer;
 }
-.nav-list .nav-on{
-  display: block
-}
-.active .nav-active{
+.nav-line span{
   display: block;
+  width: 100%;
+  height: 3px;
+  background: #0DD5FF;
+  margin: 0;
+  border-radius: 5px;
+  transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
 }
-.three .nav-three{
-  display: block;
+.nav-lineclo span{
+  background: #fff;
+}
+.nav-line span:nth-child(2){
+  margin: 10px 0;
+}
+.nav-line:hover span:nth-child(1){
+  transform: translate3d(0, -3px, 0px);
+  -webkit-transform: translate3d(0, -3px, 0px);
+}
+.nav-line:hover span:nth-child(3){
+  transform: translate3d(0,3px, 0px);
+  -webkit-transform: translate3d(0, 3px, 0px);
+}
+.nav div img{
+vertical-align:middle;
 }
 .he50{height: 50px;}
 .he30{height: 30px;}
@@ -102,4 +172,14 @@ vertical-align:middle;
     clear: both;
 
   }
+}
+@keyframes selectOne{
+  0% {transform:scale(1)}
+  50% {transform:scale(1.1)}
+  100% {transform:scale(1)}
+}
+@-webkit-keyframes selectOne{
+  0% {transform:scale(1)}
+  50% {transform:scale(1.1)}
+  100% {transform:scale(1)}
 }
