--- a/css/business.css
+++ b/css/business.css
@@ -1,13 +1,48 @@
+.business-bg:hover img{
+  animation:selectOne 1s  linear;
+  -webkit-animation:selectOne 1s  linear;
+}
 .business-list .business-title{
   text-align: center;
   font-size: 40px;
   color: #000000;
   margin: 30px 0;
+  opacity:0;
+  transition: all 2s;
+}
+.animated .business-title{
+  opacity:1;
 }
 .business-list .business-text{
   font-size: 16px;
   text-align: center;
   margin-bottom: 50px;
+  opacity:0;
+  transition: all 2s;
+}
+.list div{
+  opacity:0;
+  transition: all 2s;
+  transform: translateY(150px);
+}
+.list div.list-one{
+  transition-delay:1s;
+}
+.list div.list-two{
+  transition-delay:1.5s;
+}
+.list div.list-three{
+  transition-delay:2s;
+}
+.list div.list-four{
+  transition-delay:2.5s;
+}
+.animated .business-text{
+  opacity:1;
+}
+.animated  .list div{
+  opacity:1;
+  transform: translateY(0px);
 }
 .business-list .list-text{
   padding: 50px 10% 0 20%;
@@ -54,6 +89,24 @@
   display: flex;
   justify-content: space-between;
 }
+.case ul li{
+  opacity:0;
+  transition: all 2s;
+  transform: translateY(150px);
+}
+.case ul li.case-one{
+  transition-delay:1s;
+}
+.case ul li.case-two{
+  transition-delay:1.5s;
+}
+.case ul li.case-three{
+  transition-delay:2s;
+}
+.animated ul li{
+  opacity:1;
+  transform: translateY(0px);
+}
 .case ul li:nth-child(2){
   margin-top:150px;
 }
@@ -68,6 +121,11 @@
   color: #000000;
   /* font-weight: bold; */
   margin-top: 100px;
+  opacity: 0;
+  transition: all 2s;
+}
+.animateddiv{
+  opacity: 1;
 }
 .moveCase{
   padding: 80px 5%;
@@ -76,7 +134,35 @@
 }
 .moveCase .caseList{
   position: relative;
+  max-width: 400px;
+  width: 100%;
+  opacity:0;
+  transition: all 2s;
+  transform: translateY(150px);
+  overflow: hidden;
+  cursor: pointer;
 }
+.moveCase .caseList:hover{
+  transform: scale(1.1);
+  transition-delay:0s;
+} 
+.animated .moveOne{
+  transition-delay:0.5s;
+}
+.animated .moveTwo{
+  transition-delay:0.7s;
+}
+.animated .moveThree{
+  transition-delay:0.9s;
+}
+.animated .moveFour{
+  transition-delay:1.1s;
+}
+.animated .caseList{
+  opacity:1;
+  transform: translateY(0px);
+}
+
 .caseList .caseText{
   position: absolute;
   width: 100%;
