--- a/css/recruit.css
+++ b/css/recruit.css
@@ -1,5 +1,11 @@
+.business-bg:hover img{
+  animation:selectOne 1s  linear;
+  -webkit-animation:selectOne 1s  linear;
+}
 .recruit-title{
-  font-size: 40px;
+	font-size: 40px;
+	opacity: 0;
+  transition: all 2s;
 }
 .ourslist ul,.recruit-list {
   display: flex;
@@ -20,29 +26,29 @@
   transition: var(--t4x); /* duration 4x */
   cursor: pointer;
   opacity: 0;
-  transition: all .5s;
-  transform: translateX(150px);
+  transition: all 2s;
+  transform: translateY(150px);
 }
-.ourlist-one{
-  transition-delay:1.2s;
+.ourslist ul li.ourlist-one{
+  transition-delay:.5s;
 }
-.ourlist-two{
+.ourslist ul li.ourlist-two{
+  transition-delay:1s;
+}
+.ourslist ul li.ourlist-three{
   transition-delay:1.5s;
 }
-.ourlist-three{
-  transition-delay:1.7s;
+.ourslist ul li.ourlist-four{
+  transition-delay:2s;
 }
-.ourlist-four{
-  transition-delay:1.9s;
+.ourslist ul li.ourlist-five{
+  transition-delay:2.5s;
 }
-.ourlist-five{
-  transition-delay:2.1s;
+.ourslist ul li.ourlist-six{
+  transition-delay:3s;
 }
-.ourlist-six{
-  transition-delay:2.3s;
-}
-._active ul li{
-  transform: translateX(0px);
+.ourslist .animated li{
+  transform: translateY(0px);
   opacity: 1;
 }
 .ourslist ul li  p{
@@ -61,7 +67,29 @@
   width:33.33%;
   height: 310px;
   text-align: center;
-  margin-bottom: 50px;
+	margin-bottom: 50px;
+	opacity: 0;
+  transition: all 1s;
+  transform: translateY(150px);
+}
+.welfare ul li.welfare-one{
+	transition-delay:1s;
+}
+.welfare ul li.welfare-two{
+	transition-delay:1.5s;
+}
+.welfare ul li.welfare-three{
+	transition-delay:2s;
+}
+.welfare ul li.welfare-four{
+	transition-delay:2.5s;
+}
+.welfare ul li.welfare-five{
+	transition-delay:3s;
+}
+.welfare .animated li{
+  transform: translateY(0px);
+  opacity: 1;
 }
 .welfare ul li p{
   width: 100%;
@@ -71,10 +99,22 @@
   font-size: 14px;
   color: #9B9B9B;
 }
-
-.recruit-list div{
-  max-width: 500px;
-  width: 100%;
+.recruit-list{
+	position: relative;
+}
+.recruit-list .btn button{
+	width: 150px;
+	height: 40px;
+	background: #0DD5FF;
+	border-radius: 5px;
+	color: #fff;
+	border: none;
+}
+.done{
+	display: none;
+}
+.recruit-list>div{
+  width: 40%;
   height: 60px;
   line-height: 60px;
   box-sizing: border-box;
@@ -82,10 +122,50 @@
   background: rgba(13,213,255,0.10);
   border-radius: 5px;
   padding: 0 20px;
-  margin-bottom: 50px;
-
+	margin-bottom: 50px;
+	opacity: 0;
+  transition: all 2s;
+	transform: translateY(150px);
+	overflow: hidden;
 }
-
+.recruit-list {
+  height: 60px;
+}
+.recruit-list div.recruit-one{
+	transition-delay:0.5s;
+}
+.recruit-list div.recruit-two{
+	transition-delay:0.7s;
+}
+.recruit-list div.recruit-three{
+	transition-delay:0.9s;
+}
+.recruit-list div.recruit-four{
+	transition-delay:1.1s;
+}
+.recruit-list .all-recruit{
+	position: fixed;
+	right:0;
+	left: 0;
+	margin: 0 auto;
+	top: 10%;
+	width:100%;
+	max-width: 1200px;
+	height:80vh;
+	background: #fff;
+	overflow-y:auto;
+	z-index: 999999;
+}
+.recruit-list .all-recruit .done{
+	display: block;
+}
+.recruit-list .all-recruit .open{
+	display: none;
+}
+.animatedDiv div{
+	transform: translateY(0px);
+  opacity: 1;
+}
 /* 特效 */
 :root {
 	--time-slot-length: 0.1s;
