--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,68 @@ html, body {margin: 0;padding: 0;position: relative;top: 0;left: 0; -webkit-box-
   .clear{clear: both;}
   .fl{ float: left; }
   .fr{float: right;}
+  button{
+    cursor: pointer;
+  }
   img{
     max-width: 100%;
+  }
+  .nav-top{
+    position: fixed;
+    top:-100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #0DD5FF;  
+    z-index: 9999;
+    transition: all 2s;
+  }
+  .nav-top-nav{
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+    padding: 0 5%;
+    box-sizing: border-box;
+  }
+  .nav-top-nav img{
+    vertical-align:middle;
+  }
+  .nav-top-left{
+    position: absolute;
+    left: 0;
+    top:0;
+    width: 9.9%;
+    height: 100%;
+    background: url(../images/nav-top-right.png) no-repeat center center;
+    background-size: 100% auto;
+  }
+  .nav-top-right{
+    position: absolute;
+    right: 0;
+    top:0;
+    width: 9.9%;
+    height: 100%;
+    background: url(../images/nav-top-left.png) no-repeat center center;
+    background-size: 100% auto;
+  }
+  .nav-top-list{
+    position: absolute;
+    right: 0;
+    left: 0;
+    max-width: 400px;
+    text-align: center;
+    top:27.9%;
+    margin: 0 auto;
+  }
+  .nav-top-list>ul li {
+    margin-bottom: 30px;
+  }
+  .nav-top-list .nav-our ul {
+    display: flex;
+    justify-content: space-between;
+  }
+  .nav-top-list .nav-our ul li {
+    margin: 0 20px;
   }
   .nav{
     position: fixed;
@@ -25,7 +85,7 @@ html, body {margin: 0;padding: 0;position: relative;top: 0;left: 0; -webkit-box-
     top: 0;
     left: 0;
     background: rgba(000, 000, 000, 0);
-    z-index: 999;
+    z-index: 70;
     padding: 0 5%;
     box-sizing: border-box;
   }
@@ -33,8 +93,6 @@ html, body {margin: 0;padding: 0;position: relative;top: 0;left: 0; -webkit-box-
     width: 40px;
     margin-top: 28px;
     cursor: pointer;
-    transition: all 500ms ease;
-    -webkit-transition: all 500ms ease;
   }
   .nav-line span{
     display: block;
@@ -43,6 +101,8 @@ html, body {margin: 0;padding: 0;position: relative;top: 0;left: 0; -webkit-box-
     background: #0DD5FF;
     margin: 0;
     border-radius: 5px;
+    transition: all 500ms ease;
+    -webkit-transition: all 500ms ease;
   }
   .nav-lineclo span{
     background: #fff;
@@ -86,7 +146,7 @@ svg {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  z-index: 999;
+  z-index: 20;
 }
 
 .svg-center {
@@ -226,7 +286,7 @@ path.path-center {
   right: 0;
 }
 .trans-layer {
-  background: #ddd;
+  background: #0DD5FF;
   transform: translateY(-100%) skew(0) rotate(0) scale(2);
   border-radius: 50%;
   transition: all 500ms ease-in-out;
@@ -262,7 +322,7 @@ path.path-center {
   transform: translateY(30px);
   transition: all 500ms ease;
   transition-delay: 0s;
-  z-index: 99;
+  z-index: 10;
 }
 ._active .section-content {
   opacity: 1;
@@ -537,6 +597,17 @@ path.path-center {
   transition: all 1s;
   transition-delay:2.3s;
   transform: translateY(-150px);
+}
+.plan-text .btn{
+  display: block;
+  width: 150px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  background: #fff;
+  color: #0DD5FF;
+  border-radius: 5px;
+  border: 1px solid #0DD5FF;
 }
 ._active .plan-text{
   transform: translateY(0px);
