--- a/css/business.css
+++ b/css/business.css
@@ -128,22 +128,26 @@
   opacity: 1;
 }
 .moveCase{
+  width:100%;
   padding: 80px 5%;
   display:flex;
   justify-content:space-between;
+  box-sizing: border-box;
 }
 .moveCase .caseList{
   position: relative;
-  max-width: 400px;
-  width: 100%;
+  width:20%;
   opacity:0;
   transition: all 2s;
   transform: translateY(150px);
   overflow: hidden;
   cursor: pointer;
 }
-.moveCase .caseList:hover{
-  transform: scale(1.1);
+.moveCase .caseList img{
+  transition: all 2s;
+}
+.moveCase .caseList:hover img{
+  transform: scale(1.3);
   transition-delay:0s;
 } 
 .animated .moveOne{
@@ -169,7 +173,7 @@
   height: 99%;
   top: 0;
   left: 0;
-  padding:100% 20px 0%;
+  padding:80% 20px 0%;
   background: rgba(000, 000, 000, 0.5);
   box-sizing: border-box;
 }
